tests/suite/snapshots/suite__case_6zkb.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 8
    line: 0
    column: 8
- token: Break
  start:
    index: 8
    line: 0
    column: 8
  end:
    index: 10
    line: 1
    column: 0
- token: DirectivesEnd
  start:
    index: 10
    line: 1
    column: 0
  end:
    index: 13
    line: 1
    column: 3
- token: Empty
  start:
    index: 13
    line: 1
    column: 3
  end:
    index: 13
    line: 1
    column: 3
- token: Break
  start:
    index: 13
    line: 1
    column: 3
  end:
    index: 15
    line: 2
    column: 0
- token: Comment
  start:
    index: 15
    line: 2
    column: 0
  end:
    index: 16
    line: 2
    column: 1
- token: CommentText
  start:
    index: 16
    line: 2
    column: 1
  end:
    index: 22
    line: 2
    column: 7
- token: Break
  start:
    index: 22
    line: 2
    column: 7
  end:
    index: 24
    line: 3
    column: 0
- token: DocumentEnd
  start:
    index: 24
    line: 3
    column: 0
  end:
    index: 27
    line: 3
    column: 3
- token: Break
  start:
    index: 27
    line: 3
    column: 3
  end:
    index: 29
    line: 4
    column: 0
- token: Directive
  start:
    index: 29
    line: 4
    column: 0
  end:
    index: 30
    line: 4
    column: 1
- token: DirectiveName
  start:
    index: 30
    line: 4
    column: 1
  end:
    index: 34
    line: 4
    column: 5
- token: Separator
  start:
    index: 34
    line: 4
    column: 5
  end:
    index: 35
    line: 4
    column: 6
- token: YamlVersion
  start:
    index: 35
    line: 4
    column: 6
  end:
    index: 38
    line: 4
    column: 9
- token: Break
  start:
    index: 38
    line: 4
    column: 9
  end:
    index: 40
    line: 5
    column: 0
- token: DirectivesEnd
  start:
    index: 40
    line: 5
    column: 0
  end:
    index: 43
    line: 5
    column: 3
- token: Break
  start:
    index: 43
    line: 5
    column: 3
  end:
    index: 45
    line: 6
    column: 0
- token: Indent
  start:
    index: 45
    line: 6
    column: 0
  end:
    index: 45
    line: 6
    column: 0
- token: Scalar
  start:
    index: 45
    line: 6
    column: 0
  end:
    index: 54
    line: 6
    column: 9
- token: MappingValue
  start:
    index: 54
    line: 6
    column: 9
  end:
    index: 55
    line: 6
    column: 10
- token: Separator
  start:
    index: 55
    line: 6
    column: 10
  end:
    index: 56
    line: 6
    column: 11
- token: Scalar
  start:
    index: 56
    line: 6
    column: 11
  end:
    index: 58
    line: 6
    column: 13
- token: Break
  start:
    index: 58
    line: 6
    column: 13
  end:
    index: 60
    line: 7
    column: 0

