tests/suite/snapshots/suite__case_7bub.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 2
- token: MappingValue
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: Break
  start:
    line: 1
    column: 3
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 2
- token: SequenceEntry
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: Separator
  start:
    line: 2
    column: 3
  end:
    line: 2
    column: 4
- token: Scalar
  start:
    line: 2
    column: 4
  end:
    line: 2
    column: 16
- token: Break
  start:
    line: 2
    column: 16
  end:
    line: 3
    column: 0
- token: Separator
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 2
- token: Comment
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 3
- token: CommentText
  start:
    line: 3
    column: 3
  end:
    line: 3
    column: 29
- token: Break
  start:
    line: 3
    column: 29
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 2
- token: SequenceEntry
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 3
- token: Separator
  start:
    line: 4
    column: 3
  end:
    line: 4
    column: 4
- token: Anchor
  start:
    line: 4
    column: 4
  end:
    line: 4
    column: 5
- token: AnchorName
  start:
    line: 4
    column: 5
  end:
    line: 4
    column: 7
- token: Separator
  start:
    line: 4
    column: 7
  end:
    line: 4
    column: 8
- token: Scalar
  start:
    line: 4
    column: 8
  end:
    line: 4
    column: 18
- token: Break
  start:
    line: 4
    column: 18
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 0
- token: Scalar
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 3
- token: MappingValue
  start:
    line: 5
    column: 3
  end:
    line: 5
    column: 4
- token: Break
  start:
    line: 5
    column: 4
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 2
- token: SequenceEntry
  start:
    line: 6
    column: 2
  end:
    line: 6
    column: 3
- token: Separator
  start:
    line: 6
    column: 3
  end:
    line: 6
    column: 4
- token: Alias
  start:
    line: 6
    column: 4
  end:
    line: 6
    column: 5
- token: AnchorName
  start:
    line: 6
    column: 5
  end:
    line: 6
    column: 7
- token: Separator
  start:
    line: 6
    column: 7
  end:
    line: 6
    column: 8
- token: Comment
  start:
    line: 6
    column: 8
  end:
    line: 6
    column: 9
- token: CommentText
  start:
    line: 6
    column: 9
  end:
    line: 6
    column: 31
- token: Break
  start:
    line: 6
    column: 31
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 2
- token: SequenceEntry
  start:
    line: 7
    column: 2
  end:
    line: 7
    column: 3
- token: Separator
  start:
    line: 7
    column: 3
  end:
    line: 7
    column: 4
- token: Scalar
  start:
    line: 7
    column: 4
  end:
    line: 7
    column: 15
- token: Break
  start:
    line: 7
    column: 15
  end:
    line: 8
    column: 0

