tests/suite/snapshots/suite__case_7fwl.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: VerbatimTag
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 24
- token: Separator
  start:
    line: 0
    column: 24
  end:
    line: 0
    column: 25
- token: Scalar
  start:
    line: 0
    column: 25
  end:
    line: 0
    column: 28
- token: Separator
  start:
    line: 0
    column: 28
  end:
    line: 0
    column: 29
- token: MappingValue
  start:
    line: 0
    column: 29
  end:
    line: 0
    column: 30
- token: Break
  start:
    line: 0
    column: 30
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Separator
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: VerbatimTag
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 9
- token: Separator
  start:
    line: 1
    column: 9
  end:
    line: 1
    column: 10
- token: Scalar
  start:
    line: 1
    column: 10
  end:
    line: 1
    column: 13
- token: Break
  start:
    line: 1
    column: 13
  end:
    line: 2
    column: 0

