tests/suite/snapshots/suite__case_7lbh.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: \"\\\"c\\r\\n d\\\": 1\\r\\n\""
  start:
    index: 11
    line: 1
    column: 0
  end:
    index: 11
    line: 1
    column: 0

