tests/suite/snapshots/suite__case_7mnf.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: \"top2\\r\\n\""
  start:
    index: 21
    line: 2
    column: 0
  end:
    index: 21
    line: 2
    column: 0

