tests/suite/snapshots/suite__case_7t8x.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Folded
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Break
  start:
    line: 0
    column: 1
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: ScalarBreak
  start:
    line: 1
    column: 0
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Scalar
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 7
- token: ScalarSpace
  start:
    line: 2
    column: 7
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: Scalar
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 5
- token: Break
  start:
    line: 3
    column: 5
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: ScalarBreak
  start:
    line: 4
    column: 0
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 1
- token: Scalar
  start:
    line: 5
    column: 1
  end:
    line: 5
    column: 5
- token: ScalarSpace
  start:
    line: 5
    column: 5
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 1
- token: Scalar
  start:
    line: 6
    column: 1
  end:
    line: 6
    column: 5
- token: ScalarBreak
  start:
    line: 6
    column: 5
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 1
- token: Scalar
  start:
    line: 7
    column: 1
  end:
    line: 7
    column: 11
- token: ScalarBreak
  start:
    line: 7
    column: 11
  end:
    line: 8
    column: 0
- token: Indent
  start:
    line: 8
    column: 0
  end:
    line: 8
    column: 0
- token: ScalarBreak
  start:
    line: 8
    column: 0
  end:
    line: 9
    column: 0
- token: Indent
  start:
    line: 9
    column: 0
  end:
    line: 9
    column: 1
- token: Scalar
  start:
    line: 9
    column: 1
  end:
    line: 9
    column: 9
- token: ScalarBreak
  start:
    line: 9
    column: 9
  end:
    line: 10
    column: 0
- token: Indent
  start:
    line: 10
    column: 0
  end:
    line: 10
    column: 1
- token: Scalar
  start:
    line: 10
    column: 1
  end:
    line: 10
    column: 10
- token: ScalarBreak
  start:
    line: 10
    column: 10
  end:
    line: 11
    column: 0
- token: Indent
  start:
    line: 11
    column: 0
  end:
    line: 11
    column: 0
- token: ScalarBreak
  start:
    line: 11
    column: 0
  end:
    line: 12
    column: 0
- token: Indent
  start:
    line: 12
    column: 0
  end:
    line: 12
    column: 1
- token: Scalar
  start:
    line: 12
    column: 1
  end:
    line: 12
    column: 5
- token: ScalarSpace
  start:
    line: 12
    column: 5
  end:
    line: 13
    column: 0
- token: Indent
  start:
    line: 13
    column: 0
  end:
    line: 13
    column: 1
- token: Scalar
  start:
    line: 13
    column: 1
  end:
    line: 13
    column: 5
- token: ScalarBreak
  start:
    line: 13
    column: 5
  end:
    line: 14
    column: 0
- token: Indent
  start:
    line: 14
    column: 0
  end:
    line: 14
    column: 0
- token: Break
  start:
    line: 14
    column: 0
  end:
    line: 15
    column: 0
- token: Indent
  start:
    line: 15
    column: 0
  end:
    line: 15
    column: 0
- token: Comment
  start:
    line: 15
    column: 0
  end:
    line: 15
    column: 1
- token: CommentText
  start:
    line: 15
    column: 1
  end:
    line: 15
    column: 9
- token: Break
  start:
    line: 15
    column: 9
  end:
    line: 16
    column: 0

